--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <container class="title">   
-            <h1 class="main-title">Signup for our Newsletter</h1>
+            <h1 class="main-title">Signup for our newsletter</h1>
             <p class="sub-title">Get the latest news on how your code is doing right in your inbox</p>
         </container> 
         <br class="main-break">
