added page meta description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>The Code Review - Newsletter Sign up</title>
     <link rel="stylesheet" href="css-reset.css">
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Signup form for The Code Review's newsletter">
 </head>
 <body>
     
