--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
             </fieldset>
 
-            <button class="signup_button">Sign Up</button>
+            <button type="submit" class="signup_button">Sign Up</button>
             <p id="thankyou">Thank you for signing up! :)</p>
 
         </form>
